--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>savailsa mta-sts</title>
+    <title>svailsa mta-sts</title>
 </head>
 <body>
     <h1>svailsa mta-sts policy</h1>
