--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>svailsa mta-sts policy</h1>
     <p>The mta-sts policy file is located at:</p>
-    <a href="/.well-known/mta-sts.txt">/.well-known/mta-sts.txt</a>
+    <a href="/well-known/mta-sts.txt">/well-known/mta-sts.txt</a>
 </body>
 </html>
 
